# AniWorld-Downloader

./: .env.example  .gitignore  AniworldEpisode.py  AniworldSeason.py  AniworldSeries.py  Dockerfile  LICENSE  MANIFEST.in  README.md  config.py  docker-compose.yaml  logger.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-nuitka.yaml  docker-publish.yml  nuitka-build.yaml  publish.yaml
examples/: aniworld_episode.py  aniworld_episode_muxing.py  aniworld_season.py  aniworld_series.py  serienstream_episode.py
examples/aniworld_to/: aniworld_episode.py  aniworld_episode_aniskip.py  aniworld_episode_muxing.py  aniworld_season.py  aniworld_series.py
examples/hanime_tv/: hanime_series.py
examples/megakino/: megakino_episode.py
examples/s_to/: serienstream_episode.py  serienstream_episode_muxing.py  serienstream_season.py  serienstream_series.py
src/aniworld/: .env.example  __init__.py  __main__.py  arguments.py  autodeps.py  config.py  entry.py  env.py  logger.py  menu.py  providers.py  search.py
src/aniworld/anime4k/: __init__.py  anime4k.py
src/aniworld/aniskip/: __init__.py  aniskip.py  jikan.py
src/aniworld/ascii/: __init__.py  ascii.py
src/aniworld/common/: __init__.py  common.py
src/aniworld/extractors/: __init__.py
src/aniworld/extractors/provider/: doodstream.py  filemoon.py  hanime_tv.py  megakino.py  vidmoly.py  vidoza.py  voe.py
src/aniworld/models/: __init__.py
src/aniworld/models/aniworld_to/: __init__.py  episode.py  season.py  series.py
src/aniworld/models/common/: __init__.py  common.py
src/aniworld/models/filmpalast_to/: episode.py
src/aniworld/models/hanime_tv/: __init__.py  episode.py  season.py  series.py
src/aniworld/models/hianime/: series.py
src/aniworld/models/hianime_to/: __init__.py  episode.py  season.py
src/aniworld/models/mangafire_to/: series.py
src/aniworld/models/megakino/: __init__.py  series.py
src/aniworld/models/s_to/: __init__.py  episode.py  season.py  series.py
src/aniworld/nuitka/: build.py  manual_build.py
src/aniworld/playwright/: __init__.py  captcha.py  test.py
src/aniworld/scripts/: winget-uninstall.bat
src/aniworld/web/: __init__.py  app.py  auth.py  captcha.py  db.py
src/aniworld/web/static/: admin.js  app.js  autosync.css  autosync.js  library.js  queue.js  settings.js  style.css
src/aniworld/web/templates/: admin.html  autosync.html  base.html  index.html  library.html  login.html  settings.html  setup.html
tests/: test_aniworld_models.py  test_aniworld_providers.py
