[project]
name = "aniworld"
version = "4.3.1"
authors = [{ name = "Phoenixthrush UwU", email = "contact@phoenixthrush.com" }]
maintainers = [
  { name = "Phoenixthrush UwU", email = "contact@phoenixthrush.com" },
]
description = "AniWorld-Downloader is a command-line tool for downloading and streaming movies and series."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "niquests",
  "npyscreen",
  "ffmpeg-python",
  "python-dotenv",
  "rich",
  "fake-useragent",
  "flask",
  "flask-wtf",
  "authlib",
  "requests",
  "waitress",
  "packaging",
  "cryptography",
  "patchright",
  'windows-curses<3.14; sys_platform == "win32" and python_version < "3.14"', # npyscreen on Windows
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/phoenixthrush/AniWorld-Downloader"
changelog = "https://github.com/phoenixthrush/AniWorld-Downloader/commits/models"
documentation = "https://readthedocs.org"
bugs = "https://github.com/phoenixthrush/AniWorld-Downloader/issues"
issues = "https://github.com/phoenixthrush/AniWorld-Downloader/issues"
tracker = "https://github.com/phoenixthrush/AniWorld-Downloader/issues"
download = "https://pypi.org/project/aniworld/#files"
sponsor = "https://github.com/sponsors/phoenixthrush"
funding = "https://github.com/sponsors/phoenixthrush"
donate = "https://github.com/sponsors/phoenixthrush"
discord = "https://discord.com/invite/BfDvrKd8V5"

[tool.setuptools.package-data]
aniworld = ["web/templates/*.html", "web/static/*.css", "web/static/*.js"]

[project.scripts]
aniworld = "aniworld.__main__:main"
