[project]
name = "aniworld"
version = "4.6.1"
authors = [{ name = "Phoenixthrush UwU", email = "contact@phoenixthrush.com" }]
maintainers = [
  { name = "Phoenixthrush UwU", email = "contact@phoenixthrush.com" },
]
description = "AniWorld-Downloader is a command-line tool for downloading and streaming movies and series."
readme = "README.md"
requires-python = ">=3.10"
# requires version numbers from 06/2026
dependencies = [
  "niquests",                                                                 # >=3.7
  "npyscreen",                                                                # >=3.7
  "ffmpeg-python",                                                            # ???
  "python-dotenv",                                                            # >=3.10
  "rich",                                                                     # >=3.9.0
  "fake-useragent",                                                           # >=3.9
  "flask",                                                                    # >=3.9
  "flask-wtf",                                                                # >=3.10
  "authlib",                                                                  # >=3.10
  "requests",                                                                 # >=3.10
  "waitress",                                                                 # >=3.9.0
  "packaging",                                                                # >=3.8
  "cryptography",                                                             # !=3.9.0, !=3.9.1, >=3.9
  "patchright",                                                               # >=3.9
  'windows-curses<3.14; sys_platform == "win32" and python_version < "3.14"', # ??? - npyscreen on Windows
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/phoenixthrush/AniWorld-Downloader"
changelog = "https://github.com/phoenixthrush/AniWorld-Downloader/commits/models"
documentation = "https://readthedocs.org"
bugs = "https://github.com/phoenixthrush/AniWorld-Downloader/issues"
issues = "https://github.com/phoenixthrush/AniWorld-Downloader/issues"
tracker = "https://github.com/phoenixthrush/AniWorld-Downloader/issues"
download = "https://pypi.org/project/aniworld/#files"
sponsor = "https://github.com/sponsors/phoenixthrush"
funding = "https://github.com/sponsors/phoenixthrush"
donate = "https://github.com/sponsors/phoenixthrush"
discord = "https://discord.com/invite/BfDvrKd8V5"

[tool.setuptools.package-data]
aniworld = [
  "web/templates/*.html",
  "web/static/*.css",
  "web/static/*.js",
  "web/static/flags/*.svg",
]

[project.scripts]
aniworld = "aniworld.__main__:main"
